# networkSecurityProject

./: Dockerfile  README.md  attack_config.ini  client.py  coils_conditions.txt  config.ini  config.py  config_attack.txt  config_docker.ini  dict.py  gui.py  gui2.py  gui_docker.py  input_conditions.txt  ip.py  mitm.py  plcHistoryTOOL  server.py  servermitm.py  setup.cfg  setup.py  stop_attack.py  trigger_test.py  water_simulator_plc1.py  water_simulator_plc3.py
attackplc/: Context.py  ModbusInterface.py  Register.py  attack.py
attackplc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
attacks/: chattering.py  dos.py  dosPowerON.py  dosSpecular.py  mitm.py  plcHistoryTOOL  servermitm.py  threshold.py
registerCapture/: main.py  plcHistoryTOOL
registerCapture/historian/: plc1-127.0.0.1-8502@2022-10-04-18_02_35.835516.json  plc1-127.0.0.1-8502@2022-10-27 17_50_27.702146.json  plc1-127.0.0.1-8502@2023-07-20 11:24:11.926478.json  plc1-127.0.0.1-8502@2023-07-20 11:25:24.323423.json  plc1-127.0.0.1-8502@2023-07-20 11:27:44.115650.json  plc1-127.0.0.1-8502@2023-07-20 11:28:40.189845.json  plc1-127.0.0.1-8502@2023-07-20 11:32:39.614828.json  plc1-127.0.0.1-8502@2023-07-20 11:32:49.828640.json  plc1-127.0.0.1-8502@2023-07-20 11:35:01.906329.json  plc1-127.0.0.1-8502@2023-07-20 11:36:08.502091.json  plc1-127.0.0.1-8502@2023-07-20 11:41:56.883546.json  plc1-127.0.0.1-8502@2023-07-20 11:42:18.608971.json  plc1-127.0.0.1-8502@2023-07-20 11:43:30.005842.json  plc1-127.0.0.1-8502@2023-07-20 11:43:46.324107.json  (+272 more)
registerCapture/test/: thread.py  (+1 more)
(+49 files in other folders)
