[metadata]
name = attackplc
version = 1.0.0
author = Alessandro Righi, Cristiano Di Bari
author_email = alessandro.righi@alerighi.it, cristiano.dibari@studenti.univr.it
# url = https://github.com/althonos/{name}
description = A tool to attack PLC using the Modbus protocol
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# license_file = LICENSE
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = attackplc
# test_suite = tests
setup_requires =
    setuptools >=38.3.0
install_requires =
    modbus_tk == 1.1.2 
    coloredlogs == 15.0.1
# tests_require =
#     {tests_require}

[options.entry_points]
console_scripts =
    plc-attack = attackplc.attack:main

