[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = attackplc
# test_suite = tests
setup_requires =
    setuptools >=38.3.0
install_requires =
    modbus_tk == 1.1.2 
    coloredlogs == 15.0.1
# tests_require =
#     {tests_require}

[options.entry_points]
console_scripts =
    plc-attack = attackplc.attack:main

